--- a/Bing Hack 2020/budget.html
+++ b/Bing Hack 2020/budget.html
@@ -28,69 +28,69 @@
       <div class="column1">
         <div class="form">
           <label>Yearly Salary</label>
-          <input type="text" name="name">
+          <input type="text" name="salary">
         </div>
         <div class="form">
           <label>Food Expense</label>
-          <input type="text" name="email">
+          <input type="text" name="food">
         </div>
         <div class="form">
           <label> Housing Expense</label>
-          <input type="text" name="phone">
+          <input type="text" name="housing">
         </div>
         <div class="form">
           <label>Water Expense</label>
-          <input type="text" name="phone">
+          <input type="text" name="water">
         </div>
         <div class="form">
           <label>Electricity Expense</label>
-          <input type="text" name="phone">
+          <input type="text" name="electricity">
         </div>
         <div class="form">
           <label> Transportation Expense</label>
-          <input type="text" name="phone">
+          <input type="text" name="transportation">
         </div>
         <div class="form">
           <label>Apparel Expense</label>
-          <input type="text" name="phone">
+          <input type="text" name="apparel">
         </div>
         <div class="form">
           <label>Healthcare Expense</label>
-          <input type="text" name="phone">
+          <input type="text" name="healthcare">
         </div>
       </div>
       <div class="column1">
         <div class="form">
           <label> Entertainment Expense</label>
-          <input type="text" name="phone">
+          <input type="text" name="entertainment">
         </div>
         <div class="form">
           <label> Personal Care Expense</label>
-          <input type="text" name="phone">
+          <input type="text" name="pCare">
         </div>
         <div class="form">
           <label> Education Expense</label>
-          <input type="text" name="phone">
+          <input type="text" name="education">
         </div>
         <div class="form">
           <label> Donations Expense</label>
-          <input type="text" name="phone">
-        </div>
-        <div class="form">
-          <label> Misc. Expenses</label>
-          <input type="text" name="phone">
+          <input type="text" name="donations">
         </div>
         <div class="form">
           <label> Insurance and Taxes Expenses</label>
-          <input type="text" name="phone">
+          <input type="text" name="insTax">
+        </div>
+        <div class="form">
+          <label> Misc. Expenses</label>
+          <input type="text" name="misc">
         </div>
         <div class="form">
           <label>Monthly Contribution</label>
-          <input type="text" name="phone">
+          <input type="text" name="contribution">
         </div>
         <div class="form">
           <label>Zip Code</label>
-          <input type="text" name="phone">
+          <input type="text" name="zip">
         </div>
       </div>
     </div>
