--- a/Bing Hack 2020/budget.html
+++ b/Bing Hack 2020/budget.html
@@ -23,7 +23,7 @@
   <h1 class="title"> Green4Green </h1>
   <h2> Please input your information to build your budget! </h2>
   <p> Note: Please input a yearly salary but monthly expenses.</p>
-  <form action="./">
+  <form action= "results.html">
     <div class="row">
       <div class="column1">
         <div class="form">
