--- a/Bing Hack 2020/budget.html
+++ b/Bing Hack 2020/budget.html
@@ -91,7 +91,12 @@
           <label>Zip Code</label>
           <input type="text" id="zip">
         </div>
-      </div>
+        <div class="form">
+          <label>Community Type </label>
+          <input type="radio" id="urban">
+          <input type="radio" id="suburban">
+          <input type="radio" id="rural>
+         </div>
     </div>
     <div class="stupid">
       <button class="dumb"onclick="budget()"> Get Your Results Now!! </button>
