--- a/Bing Hack 2020/results.html
+++ b/Bing Hack 2020/results.html
@@ -20,7 +20,39 @@
   <br>
   <h1 id="title"> Green4Green </h1>
   <h2> Top Suggestions </h2>
-  <h2> Other Suggestions </h2>
+  <p id="meatType"> Purchase less red meat.</p>
+  <p id="reusableBag"> Use reusable bags while purchasing groceries.</p>
+  <p id="ownFood"> Buy your own food and cook more often.</p>
+  <p id="bulkCook"> Meal prep and buy in bulk to save electricity and money.</p>
+  <p id= "shortShower"> Save water and money on bills by cutting down your shower time. </p>
+  <p id= "teethBrush"> Turn off water while you brush your teeth. </p>
+  <p id="waterButt"> Install a water butt to collect rainwater. </p>
+  <p id="washMachine"> Purchase an energy star washing machine to save money and water. </p>
+  <p id="toilet"> Purchase an energy efficent toilet. </p>
+  <p id="xeriscaping"> Xeriscaping can reduce water usage by 50-75%.</p>
+  <p id="drying"> Hang clothes to dry to save electricity. </p>
+  <p id="thermostat"> Don't adjust thermostat as much to save money and electricity. </p>
+  <p id="lightBulb"> Use energy efficent light bulbs. </p>
+  <p id="powerStrip"> Purchase smart power strips to save money in the long run. </p>
+  <p id="lightSwitch"> Installing motion sensored light switches can save up to $100 a year and will turn off automatically so you don't waste electricity.</p>
+  <p id="heatWindows"> Install energy efficent windows that conserve heat. </p>
+  <p id="coolWindows"> Install energy efficient windows that prevent heat gain. </p>
+  <p id="car"> Saving for a energy efficient car leads to significant savings long term. </p>
+  <p id="solar">Installing solar panels leads to saving on electricity in the long term.</p>
+  <p id="pact"> Pact Clothing: Organic, GOTS Certified, fair trade, eco-friendly, and cheap clothing.</p>
+  <p id="thredUP"> ThredUp: Upcycled clothing marked down in price significantly. </p>
+  <p id="everlane"> Everlane: Ethically made adult clothing for moderate costs. </p>
+  <p id="tentree"> TenTree: Ethically made, organic, eco-friendly, gives back to the environment by planting ten trees for every item purchased.</p>
+  <p id="able"> Able: Artisan-made in Peru with fair labor practices. Women are hired and paid well to help them provide for themselves to end generational poverty.</p>
+  <p id="peopleTree"> People Tree Clothing: Fair trade, certified organic clothing made to last. Fairly priced but will last for years.</p>
+  <p id="toothpaste"> Tom's of Maine Toothpaste: Relatively cheap toothpaste from an eco-friendly company with good business practices. They only use natural ingredients and use recycled packaging and donate 10% of profits to non-profits.</p>
+  <p id="deoderant"> Tom's of Maine Deoderant: Natural long lasting deoderant that is aluminum-free with a recyclable plastic container.</p>
+  <p id="haircare"> Burt's Bees Shampoo and Conditioner: Uses post-consumer recycled materials in their packaging and the container is recyclable once it's empty. Good working conditions and no animal testing.</p>
+  <p id="soap"> Organic pure castile liquid soap: Cheap, doesn't use chemical-laden fragrance. Vegetable-based, organic, and used for anything: hand-soap, dish soap, etc.</p>
+  <p id="nonelectric"> Find other methods of transportation: Walk, bike, skateboard, etc. Not using public transportation or a car is an energy efficient way to get around.</p>
+  <p id="carpool"> Carpool: Carpooling with two or three people will cut back significantly on car emissions.</p>
+  <p id-"publicTransport"> Use public transportation: The more people take busses and subways, the fewer cars are on the road, lowering emissions.</p>
+  <p id="electricVehicle"> Purchase an energy efficient car: If you save for (NOTE||| THE TEXT MAY NOT WORK DUE TO MATH) " + str(Math.ciel(25000/monthlyDollars)) + " months, you can buy an energy efficient car and save both energy and money.</p>
 </body>
 
   <script type="module" src =" ./decisions.js"></script>
