--- a/Bing Hack 2020/budget.html
+++ b/Bing Hack 2020/budget.html
@@ -91,12 +91,10 @@
           <label>Zip Code</label>
           <input type="text" id="zip">
         </div>
-        <div class="form">
-          <label>Community Type </label>
-          <input type="radio" id="urban">
-          <input type="radio" id="suburban">
-          <input type="radio" id="rural>
-         </div>
+          <div class="form">
+          <label>Community Type</label>
+          <input type="text" name="community">
+     </div>
     </div>
     <div class="stupid">
       <button class="dumb"onclick="budget()"> Get Your Results Now!! </button>
