--- a/Bing Hack 2020/about.html
+++ b/Bing Hack 2020/about.html
@@ -22,25 +22,25 @@
   <h1 id="title"> Green4Green </h1>
   <h2> About Our Team </h2>
   <div class="thisSucks">
-    <img class="jack" src="https://drive.google.com/open?id=112BgBGpHNZ-MVaZX_U66LjJBSKXEb77c">
+    <img class="jack" src="https://drive.google.com/uc?id=112BgBGpHNZ-MVaZX_U66LjJBSKXEb77c">
   </div>
   <h3> Jack Albertson </h3>
 
 
   <div class="thisSucks">
-    <img class="matt" src="https://drive.google.com/open?id=17uEDmvluAFfPV3jm_IZwWGjTYgjc7LL6">
+    <img class="matt" src="https://drive.google.com/uc?id=17uEDmvluAFfPV3jm_IZwWGjTYgjc7LL6">
   </div>
   <h3> Matt Aguilar </h3>
 
 
   <div class="thisSucks">
-    <img class="ilana" src="https://drive.google.com/open?id=1Zqd8lzzaSCf-nEDO2hIEO93fCY0-smCM">
+    <img class="ilana" src="https://drive.google.com/uc?id=1Zqd8lzzaSCf-nEDO2hIEO93fCY0-smCM">
   </div>
   <h3> Ilana Grossman </h3>
 
 
   <div class="thisSucks">
-    <img class="sophie" src="https://drive.google.com/open?id=1SVtw3dJu-1RysilAcLoaUskL54pypea4">
+    <img class="sophie" src="https://drive.google.com/uc?id=1SVtw3dJu-1RysilAcLoaUskL54pypea4">
   </div>
   <h3> Sophie Saremsky </h3>
 
