--- a/Bing Hack 2020/budget.html
+++ b/Bing Hack 2020/budget.html
@@ -93,7 +93,7 @@
         </div>
           <div class="form">
           <label>Community Type</label>
-          <input type="text" name="community">
+          <input type="text" id="community">
      </div>
     </div>
     <div class="stupid">
