Final from hackathon

--- a/Bing Hack 2020/budget.html
+++ b/Bing Hack 2020/budget.html
@@ -97,10 +97,9 @@
      </div>
     </div>
     <div class="stupid">
-      <button class="dumb"onclick="budget();coordsByZipcode()"> Get Your Results Now!! </button>
+      <button class="dumb" id="duuuumb" onclick="budget(); window.location.href ='./results.html'"> Get Your Results Now!! </button>
 
     </div>
   </div>
 <script src="budgetinfo.js"></script>
-<script src="zipcode.js"></script>
 </html>
