--- a/Bing Hack 2020/results.html
+++ b/Bing Hack 2020/results.html
@@ -7,11 +7,11 @@
   <title>Green4Green</title>
 
   <link rel="stylesheet" href="./stylesheet.css" type="text/css">
-
+  <script src =" ./decisions.js"></script>
 
 </head>
 
-<body>
+<body onload="main();">
   <ul>
     <li><a href="homepage.html">Home</a></li>
     <li><a href="budget.html">Budget</a></li>
@@ -20,13 +20,14 @@
   <br>
   <h1 id="title"> Green4Green </h1>
   <h2> Top Suggestions </h2>
-  <p id="overbudget"> You are overbudget! Cutting down on expenses should be your first priority!</p>
+  <!-- <p id="overbudget"> You are overbudget! Cutting down on expenses should be your first priority!</p> -->
   <p id="meatType"> Purchase less red meat.</p>
   <p id="reusableBag"> Use reusable bags while purchasing groceries.</p>
   <p id="ownFood"> Buy your own food and cook more often.</p>
   <p id="bulkCook"> Meal prep and buy in bulk to save electricity and money.</p>
   <p id= "shortShower"> Save water and money on bills by cutting down your shower time. </p>
   <p id= "teethBrush"> Turn off water while you brush your teeth. </p>
+  <p id="showerHead"> WaterSense showerhead: WaterSense showerheads save families an average of 2900 gallons of water per year, saving both water and money.</p>
   <p id="waterButt"> Install a water butt to collect rainwater. </p>
   <p id="washMachine"> Purchase an energy star washing machine to save money and water. </p>
   <p id="toilet"> Purchase an energy efficent toilet. </p>
@@ -50,11 +51,9 @@
   <p id="deoderant"> Tom's of Maine Deoderant: Natural long lasting deoderant that is aluminum-free with a recyclable plastic container.</p>
   <p id="haircare"> Burt's Bees Shampoo and Conditioner: Uses post-consumer recycled materials in their packaging and the container is recyclable once it's empty. Good working conditions and no animal testing.</p>
   <p id="soap"> Organic pure castile liquid soap: Cheap, doesn't use chemical-laden fragrance. Vegetable-based, organic, and used for anything: hand-soap, dish soap, etc.</p>
-  <p id="nonelectric"> Find other methods of transportation: Walk, bike, skateboard, etc. Not using public transportation or a car is an energy efficient way to get around.</p>
+  <p id="nonElectric"> Find other methods of transportation: Walk, bike, skateboard, etc. Not using public transportation or a car is an energy efficient way to get around.</p>
   <p id="carpool"> Carpool: Carpooling with two or three people will cut back significantly on car emissions.</p>
-  <p id-"publicTransport"> Use public transportation: The more people take busses and subways, the fewer cars are on the road, lowering emissions.</p>
-  <p id="electricVehicle"> Purchase an energy efficient car: If you save for (NOTE||| THE TEXT MAY NOT WORK DUE TO MATH) " + str(Math.ciel(25000/monthlyDollars)) + " months, you can buy an energy efficient car and save both energy and money.</p>
+  <p id="publicTransport"> Use public transportation: The more people take busses and subways, the fewer cars are on the road, lowering emissions.</p>
+  <p id="electricVehicle"> Purchase an energy efficient car. You can buy an energy efficient car and save both energy and money.</p>
 </body>
-
-  <script type="module" src =" ./decisions.js"></script>
 </html>
